@@ -28,4 +28,9 @@
 GtkWidget * infoview_create (ProcData *data) G_GNUC_INTERNAL;
 void	infoview_update (ProcData *data) G_GNUC_INTERNAL;
 
+
+const char *
+infoview_toggle_button_get_msg(ProcData *procdata) G_GNUC_INTERNAL;
+
+
 #endif
