@@ -1,5 +1,15 @@
 2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* src/infoview.c: (infoview_toggle_button_get_msg):
+	* src/infoview.h:
+	* src/interface.c: (create_proc_view), (toggle_infoview):
+	* src/procman.c: (main): Fixed More/Less info state.
+	Closes #170141.
+	
+	Merged some strings.
+
+2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/interface.c: (create_sys_view):
 	* src/openfiles.c: (compare_open_files): don't use C++-style comments.
 	Patch by jensgr@gmx.net (Jens Granseuer).
